--- a/ejercicio10/ejer10.css
+++ b/ejercicio10/ejer10.css
@@ -1,49 +1,82 @@
 body {
     background-color: gray;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: small;
 }
 
-.header {
+header {
     background-image: url(Patrones/bg_verde.png);
     color: white;
     padding: 20px;
 }
 
-.header .iconos {
+header .iconos {
 text-align: right;
 }
 
-.header .logoUEx {
-    margin-left: 550px;
-}
-
-.header .menuHeader {
-    border-top: 1px dotted gray;
-    border-bottom: 1px dotted gray;
-    padding: 15px;
+header .cabecera {
     width: 700px;
     margin: auto;
 }
 
-.header .menuHeader > span {
+header .menuHeader {
+    border-top: 1px dotted gray;
+    border-bottom: 1px dotted gray;
+    padding: 15px;
+}
+
+header .menuHeader > span {
     margin-right: 15px;
 }
 
-.header .menuHeader > span:nth-last-of-type(1) {
+header .menuHeader > span:nth-last-of-type(1) {
     float: right;
+    font-weight: bold;
 }
 
-.main {
-    margin-left: 20px;
+main {
+    margin: auto;
     background-color: lightgray;
     border-radius: 5px;
     padding: 10px;
-    width: 750px;
-    margin-left: 550px;
+    width: 700px;
 }
 
-.footer {
+main > div:nth-of-type(1) {
+    margin-top: -18px;
+    font-size: x-small;
+}
+
+main .asterisco {
+    color: red;
+}
+
+main .divFormulario label {
+    font-weight: bold;
+}
+
+main .divFormulario .entrada {
+    width: 500px;
+}
+
+main .divFormulario p {
+    margin-top: 0;
+    font-size: x-small;
+}
+
+footer {
     background-image: url(Patrones/bg_gris.png);
     color: white;
     text-align: center;
-    padding: 20px;
+    padding: 20px;  
+}
+
+footer .logos {
+    border-bottom: 1px dotted gray;
+    padding-bottom: 10px;
+}
+
+footer .logos img {
+    padding-left: 30px;
+    padding-right: 30px;
 }
