--- a/ejercicio10/ejer10.css
+++ b/ejercicio10/ejer10.css
@@ -80,3 +80,7 @@ footer .logos img {
     padding-left: 30px;
     padding-right: 30px;
 }
+
+footer .logos img:hover {
+    transform: scale(110%);
+}
