--- a/tema05/ejer5/ejer5.css
+++ b/tema05/ejer5/ejer5.css
@@ -12,7 +12,8 @@ header {
 }
 
 header .iconos {
-text-align: right;
+    position: absolute;
+    left: 96%;
 }
 
 header .cabecera {
@@ -88,20 +89,37 @@ footer .logos img:hover {
 
 @media screen and (max-width: 320px) {
 
-    header {
-        width: max-content;
+    header .iconos > i {
+        display: none;   
     }
-
 
     header .cabecera .logoUEx img {
-        width: 50%;
+        width: 35%;
     }
     header .cabecera .menuHeader {
-        width: 50%;
+        width: 20%;
     }
+
     header .cabecera .menuHeader span {
         float: none;
         font-weight: 100;
+    }
+
+    main {
+        width: 90%;
+    }
+
+    main .divFormulario .entrada {
+        width: 60%;
+    }
+
+    main p:nth-of-type(1) {
+        display: none;
+    }
+
+
+    footer .logos {
+        display: none;
     }
 
 }
