--- a/proyecto/pagina1/login.css
+++ b/proyecto/pagina1/login.css
@@ -15,11 +15,24 @@ body {
     padding: 15px;
 }
 
+.formulario > form > hr {
+    width: 90%;
+}
+
+.formulario form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
 .formulario  input {
+    width: 10vw;
     padding: 5px;
     margin-bottom: 8px;
     border-radius: 5%;
 }
+
 
 .formulario #boton {
     width: 50%;
@@ -27,7 +40,7 @@ body {
     box-shadow: 0 2px 0 1x;
 }
 
-.formulario > p:nth-of-type(1) {
+.formulario > form > p:nth-of-type(1) {
     background-color: brown;
     border-radius: 4%;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -35,7 +48,7 @@ body {
     padding: 2px;
 }
 
-.formulario > p:nth-of-type(2) {
+.formulario > form > p:nth-of-type(2) {
     font-size: x-small;
 }
 
