--- a/proyecto/pagina1/login.css
+++ b/proyecto/pagina1/login.css
@@ -1,17 +1,24 @@
 body {
-    background-color: #185403;
+    background-color: lightgreen;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23db4206' fill-opacity='0.4'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+
+    display: flex;
+    
+    justify-content: center; 
+    align-items: center; 
+    /* flex-flow: wrap; */  
+    flex-wrap: wrap; 
+    align-content: center;
+
 }
 
 .formulario {
     border: 1px solid brown;
     border-radius: 5%;
-    text-align: center;
-    margin-top: 15%;
-    margin-left: 45%;
+    text-align: center; 
     background-color: darkgreen;
     color: white;
-    width: max-content;
+    width: 50vw;
     padding: 15px;
 }
 
@@ -35,7 +42,7 @@ body {
 
 
 .formulario #boton {
-    width: 50%;
+    width: 10%;
     border-radius: 10%;
     box-shadow: 0 2px 0 1x;
 }
@@ -49,6 +56,7 @@ body {
 }
 
 .formulario > form > p:nth-of-type(2) {
-    font-size: x-small;
+    font-size: small;
+    text-decoration: underline;
 }
 
