--- a/proyecto/index.css
+++ b/proyecto/index.css
@@ -8,6 +8,11 @@ header {
     background-color: #333;
     color: #fff;
     padding: 10px;
+    text-align: center;
+}
+
+.menu nav ul li a {
+    color: black;
 }
 
 nav ul {
