--- a/proyecto/index.css
+++ b/proyecto/index.css
@@ -1,18 +1,42 @@
 body {
-    font-family: Arial, sans-serif;
+    background-color: burlywood;
+    font-family: sans-serif, Arial;
     margin: 0;
     padding: 0;
+    width: 100%;
 }
 
 header {
-    background-color: #333;
+    background-color: #3d7906;
     color: #fff;
     padding: 10px;
     text-align: center;
 }
 
-.menu nav ul li a {
-    color: black;
+header img {
+    width: 150px;
+}
+
+header hr {
+    width: 60%;
+}
+
+header nav {
+    width: 75%;
+    text-align: center;
+    padding: 10px;
+}
+
+header nav ul li {
+    display: inline-block;
+}
+
+header nav ul li a {
+    margin-right: 10px;
+}
+
+header nav ul li:nth-last-of-type(2), li:nth-last-of-type(1) {
+    float: right;
 }
 
 nav ul {
@@ -31,14 +55,16 @@ nav a {
     color: #fff;
 }
 
-section {
+#content {
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
 }
 
+
+
 footer {
-    background-color: #333;
+    background-color: #3d7906;
     color: #fff;
     text-align: center;
     padding: 10px;
