--- a/proyecto/index.css
+++ b/proyecto/index.css
@@ -1,9 +1,33 @@
+
+
+body {  display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 3fr 0.5fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "header header"
+      "video main"
+      "footer footer";
+  }
+  
+  .header { grid-area: header; }
+  
+  .footer { grid-area: footer; }
+  
+  .main { grid-area: main; }
+  
+  .video { grid-area: video; }
+  
+
+
 body {
     background-color: burlywood;
     font-family: sans-serif, Arial;
     margin: 0;
     padding: 0;
-    width: 100%;
+    /*width: 100vw;*/
+    /*height: 100%;*/
 }
 
 .header {
@@ -57,18 +81,24 @@ nav a {
 
 .main {
     max-width: 800px;
-    margin: 20px auto;
+    margin: 20px 120px;
     padding: 20px;
 }
-
-
 
 .footer {
     background-color: #3d7906;
     color: #fff;
     text-align: center;
-    padding: 10px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+}
+
+
+.video {
+    margin: auto;
+    margin-left: 100px;
+    text-align: center;
+}
+
+.video > iframe {
+    width: 600px;
+    height: 350px;
 }
