--- a/proyecto/index.css
+++ b/proyecto/index.css
@@ -81,13 +81,34 @@ nav a {
 
 .main {
     max-width: 800px;
+    max-height: calc(100vh - 200px);
     padding: 20px;
+    overflow-y: scroll;
 }
 
 .footer {
     background-color: #3d7906;
     color: #fff;
     text-align: center;
+}
+
+
+.footer img:nth-of-type(1) {
+    width: 150px;
+    height: 120px;
+    margin: auto;
+    position: relative;
+    float: right;
+    margin-top: -7vh;
+}
+
+.footer img:nth-of-type(2) {
+    width: 150px;
+    height: 120px;
+    margin: auto;
+    position: relative;
+    float: left;
+    margin-top: -7vh;
 }
 
 
