--- a/proyecto/index.css
+++ b/proyecto/index.css
@@ -87,28 +87,28 @@ nav a {
 }
 
 .footer {
+    display: flex;
+    justify-content: space-between;
     background-color: #3d7906;
     color: #fff;
     text-align: center;
 }
 
+.footer p {
+    display: flex;
+}
+
 
 .footer img:nth-of-type(1) {
+
     width: 150px;
     height: 120px;
-    margin: auto;
-    position: relative;
-    float: right;
-    margin-top: -7vh;
 }
 
 .footer img:nth-of-type(2) {
+
     width: 150px;
     height: 120px;
-    margin: auto;
-    position: relative;
-    float: left;
-    margin-top: -7vh;
 }
 
 
