--- a/proyecto/index.css
+++ b/proyecto/index.css
@@ -1,31 +1,10 @@
 
-
-body {  display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: 1fr 3fr 0.5fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      "header header"
-      "video main"
-      "footer footer";
-  }
-  
-  .header { grid-area: header; }
-  
-  .footer { grid-area: footer; }
-  
-  .main { grid-area: main; }
-  
-  .video { grid-area: video; }
-  
-
-
 body {
     background-color: burlywood;
     font-family: sans-serif, Arial;
     margin: 0;
     padding: 0;
+
     /*width: 100vw;*/
     /*height: 100%;*/
 }
@@ -33,8 +12,8 @@ body {
 .header {
     background-color: #3d7906;
     color: #fff;
-    padding: 10px;
     text-align: center;
+    height: 22vh;
 }
 
 .header img {
@@ -79,9 +58,14 @@ nav a {
     color: #fff;
 }
 
-.main {
-    max-width: 800px;
-    max-height: calc(100vh - 200px);
+.container {
+    height: calc(100vh - 30.3vh);
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row-reverse;
+}
+
+.container .main {
     padding: 20px;
     overflow-y: scroll;
 }
@@ -92,6 +76,7 @@ nav a {
     background-color: #3d7906;
     color: #fff;
     text-align: center;
+    height: 8.3vh;
 }
 
 .footer p {
@@ -100,15 +85,13 @@ nav a {
 
 
 .footer img:nth-of-type(1) {
-
-    width: 150px;
-    height: 120px;
+    width: 120px;
+    height: 80px;
 }
 
 .footer img:nth-of-type(2) {
-
-    width: 150px;
-    height: 120px;
+    width: 120px;
+    height: 80px;
 }
 
 
