--- a/proyecto/index.css
+++ b/proyecto/index.css
@@ -70,6 +70,10 @@ nav a {
     overflow-y: scroll;
 }
 
+.container .main p {
+    
+}
+
 .footer {
     display: flex;
     justify-content: space-between;
