--- a/proyecto/index.css
+++ b/proyecto/index.css
@@ -9,37 +9,37 @@ body {
     /*height: 100%;*/
 }
 
-.header {
+header {
     background-color: #3d7906;
     color: #fff;
     text-align: center;
     height: 22vh;
 }
 
-.header img {
+header img {
     width: 150px;
 }
 
-.header hr {
+header hr {
     width: 60%;
 }
 
-.header nav {
+header nav {
     width: 75%;
     text-align: center;
     padding: 10px;
 }
 
-.header nav ul li {
+header nav ul li {
     display: inline-block;
 }
 
 
-.header nav ul li a {
+header nav ul li a {
     margin-right: 10px;
 }
 
-.header nav ul li:nth-last-of-type(2), li:nth-last-of-type(1) {
+header nav ul li:nth-last-of-type(2), li:nth-last-of-type(1) {
     float: right;
 }
 
@@ -66,16 +66,16 @@ nav a {
     flex-direction: row-reverse;
 }
 
-.container .main {
+.container main {
     padding: 20px;
     overflow-y: scroll;
 }
 
-.container .main p {
+.container main p {
     max-width: 90%;
 }
 
-.footer {
+footer {
     display: flex;
     justify-content: space-between;
     background-color: #3d7906;
@@ -84,7 +84,7 @@ nav a {
     height: 8.3vh;
 }
 
-.footer p {
+footer p {
     display: flex;
 }
 
