--- a/proyecto/index.css
+++ b/proyecto/index.css
@@ -1,3 +1,4 @@
+/* BODY */
 
 body {
     background-color: burlywood;
@@ -8,6 +9,8 @@ body {
     /*width: 100vw;*/
     /*height: 100%;*/
 }
+
+/* HEADER */
 
 header {
     background-color: #3d7906;
@@ -39,7 +42,8 @@ header nav ul li a {
     margin-right: 10px;
 }
 
-header nav ul li:nth-last-of-type(2), li:nth-last-of-type(1) {
+header nav ul li:nth-last-of-type(2),
+li:nth-last-of-type(1) {
     float: right;
 }
 
@@ -59,11 +63,15 @@ nav a {
     color: #fff;
 }
 
+/* CONTAINER */
+
 .container {
+    /* El calc está hecho para que el container ocupe toda la pantalla menos la altura(sumada) del header y el footer */
     height: calc(100vh - 30.3vh);
     display: flex;
     justify-content: space-evenly;
     flex-direction: row-reverse;
+
 }
 
 .container main {
@@ -74,6 +82,19 @@ nav a {
 .container main p {
     max-width: 90%;
 }
+
+.video {
+    margin: auto;
+    margin-left: 50px;
+    text-align: center;
+}
+
+.video>iframe {
+    width: 600px;
+    height: 350px;
+}
+
+/* FOOTER */
 
 footer {
     display: flex;
@@ -88,25 +109,93 @@ footer p {
     display: flex;
 }
 
-
-.footer img:nth-of-type(1) {
+.footer img {
     width: 120px;
     height: 80px;
 }
 
-.footer img:nth-of-type(2) {
-    width: 120px;
-    height: 80px;
+/* HOVER */
+
+main h1:hover, h2:hover {
+    color: #3d7906;
+    margin-left: 7vw;
+    transform: scale(120%);
+    transition: transform 1s, color 1.2s,margin-left 1s;
+}
+
+.container main img:hover {
+    margin-left: 7vw;
+    transform: scale(130%);
+    transition:transform 0.5s, margin-left 1s;
 }
 
 
-.video {
-    margin: auto;
-    margin-left: 50px;
-    text-align: center;
-}
+@media screen and (min-width: 425px) and (max-width: 1024px) {
 
-.video > iframe {
-    width: 600px;
-    height: 350px;
+    header nav {
+        display: flex;
+        justify-content: center;
+        width: 100vw;
+    }
+
+    header nav ul li:nth-last-of-type(2),
+    header nav ul li:nth-last-of-type(1) {
+        float: none;
+        margin-top: 10px;
+        margin-left: 5vw;
+    }
+
+    header nav ul {
+        text-align: center;
+    }
+
+    header nav ul li {
+        margin-right: 0;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+
+    header ul li:nth-of-type(5) {
+        display: none;
+    }
+
+    .container {
+        height: auto;
+        flex-direction: column;
+        align-items: stretch;
+        display: block;
+    }
+
+    .container main {
+        max-width: none;
+        width: 100%;
+        margin-right: 0;
+        overflow: hidden;
+        text-align: center;
+    }
+
+    .video {
+        margin-left: 0;
+    }
+
+    main h1,
+    h2 {
+        color: inherit;
+        transform: none;
+        margin: inherit;
+        transition: none;
+    }
+
+    main h1:hover, h2:hover {
+        color: inherit;
+        margin: auto;
+        transform: none;
+        transition: none;
+    }
+    
+    .container main img:hover {
+        margin: 0;
+        transform: none;
+        transition: none
+    }
 }
