--- a/proyecto/Login/login.css
+++ b/proyecto/Login/login.css
@@ -50,6 +50,9 @@ body {  display: grid;
     width: 75%;
     text-align: center;
     padding: 10px;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
 }
 
 .header nav ul li {
@@ -60,9 +63,6 @@ body {  display: grid;
     margin-right: 10px;
 }
 
-.header nav ul li:nth-last-of-type(1) {
-    float: right;
-}
 
 nav ul {
     list-style-type: none;
@@ -196,7 +196,7 @@ a {
     filter: brightness(.8);
    }
    
-   @media screen and (max-width: 1024px) {
+   @media screen and (min-width: 425px) and (max-width: 1024px) {
 
     .formulario .button {
         font-size: x-small;
