--- a/proyecto/index.css
+++ b/proyecto/index.css
@@ -5,7 +5,6 @@ body {
     font-family: sans-serif, Arial;
     margin: 0;
     padding: 0;
-
     /*width: 100vw;*/
     /*height: 100%;*/
 }
@@ -17,10 +16,12 @@ header {
     color: #fff;
     text-align: center;
     height: 22vh;
+    overflow: hidden;
 }
 
 header img {
-    width: 150px;
+    height: 60%;
+    width: auto;
 }
 
 header hr {
@@ -116,17 +117,18 @@ footer p {
 
 /* HOVER */
 
-main h1:hover, h2:hover {
+main h1:hover,
+h2:hover {
     color: #3d7906;
     margin-left: 7vw;
     transform: scale(120%);
-    transition: transform 1s, color 1.2s,margin-left 1s;
+    transition: transform 1s, color 1.2s, margin-left 1s;
 }
 
 .container main img:hover {
-    margin-left: 7vw;
-    transform: scale(130%);
-    transition:transform 0.5s, margin-left 1s;
+    margin-left: 4vw;
+    transform: scale(110%);
+    transition: transform 0.5s, margin-left 1s;
 }
 
 
@@ -186,16 +188,128 @@ main h1:hover, h2:hover {
         transition: none;
     }
 
-    main h1:hover, h2:hover {
+    main h1:hover,
+    h2:hover {
         color: inherit;
         margin: auto;
         transform: none;
         transition: none;
     }
-    
+
     .container main img:hover {
         margin: 0;
         transform: none;
         transition: none
     }
+}
+
+@media screen and (max-width: 426px) {
+    header {
+        width: 100vw;
+        height: auto;
+    }
+
+    header img {
+        height: 100%;
+        width: auto;
+    }
+
+    header nav {
+        width: 100%;
+        padding: 5px;
+        display: none;
+        transition: opacity 0.3s;
+        opacity: 0;
+    }
+
+    header nav ul li {
+        display: block;
+        margin-right: 0;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+
+    header nav ul li:nth-of-type(1), header nav ul li:nth-of-type(2), header nav ul li:nth-of-type(3), header nav ul li:nth-of-type(4) {
+        display: inline-block;
+    }
+
+    header nav ul li:nth-last-of-type(2),
+    header nav ul li:nth-last-of-type(1) {
+        float: none;
+        margin-top: 10px;
+        margin-left: 0;
+    }
+
+    header nav ul li:nth-of-type(5) {
+        overflow: hidden;
+    }
+
+    .container {
+        height: auto;
+        flex-direction: column;
+        align-items: stretch;
+        display: block;
+    }
+
+    .container main {
+        max-width: none;
+        width: 100vw;
+        margin-right: 0;
+        padding: 0;
+        overflow: hidden;
+        text-align: center;
+    }
+
+    .container main img {
+        width: 40vw;
+    }
+
+    .video {
+        margin-left: 0;
+    }
+
+    .video>iframe {
+        width: auto;
+    }
+
+    main h1,
+    h2 {
+        color: inherit;
+        transform: none;
+        margin: inherit;
+        transition: none;
+    }
+
+    main h1:hover,
+    h2:hover {
+        color: inherit;
+        margin: auto;
+        transform: none;
+        transition: none;
+    }
+
+    .container main img:hover {
+        margin: 0;
+        transform: none;
+        transition: none;
+    }
+
+    footer p {
+        text-align: center;
+        padding: auto;
+        margin: auto;
+        font-size: small;
+    }
+
+    footer img {
+        display: none;
+    }
+
+    header:hover nav,
+    header img:hover+nav {
+        display: block;
+        opacity: 1;
+        transition: opacity 0.3s;
+    }
+
 }
