--- a/proyecto/Fauna/fauna.css
+++ b/proyecto/Fauna/fauna.css
@@ -132,6 +132,12 @@ footer img {
     height: auto;
 }
 
+header nav ul li:hover {
+    background-color: #51990d;
+    border-radius: 15%;
+    transform: scale(110%);
+}
+
 
 
 @media screen and (min-width: 425px) and (max-width: 1024px) {
