--- a/proyecto/index.css
+++ b/proyecto/index.css
@@ -118,6 +118,18 @@ footer img {
 
 /* HOVER */
 
+header nav ul li:hover {
+    background-color: #51990d;
+    border-radius: 15%;
+    transform: scale(110%);
+}
+
+header nav ul li:nth-of-type(5):hover {
+    background-color: initial;
+    border-radius: 0%;
+    transform: scale(100%);
+}
+
 main h1:hover,
 h2:hover {
     color: #3d7906;
