--- a/proyecto/index.css
+++ b/proyecto/index.css
@@ -5,56 +5,62 @@ body {
     font-family: sans-serif, Arial;
     margin: 0;
     padding: 0;
-    height: 100vh;
-    /*width: 100vw;*/
-    /*height: 100%;*/
+    height: 100vh; /* Establece la altura del body al 100% de la altura visible del viewport */
 }
 
 /* HEADER */
 
+/* Estilos para el header */
 header {
     background-color: #3d7906;
     color: #fff;
     text-align: center;
-    height: 22vh;
-    overflow: hidden;
+    height: 22vh; /* Establece la altura del header al 22% de la altura visible del viewport */
+    overflow: hidden; /* Oculta el contenido que desborda del header */
 }
 
+/* Estilos para la imagen dentro del header */
 header img {
-    height: 60%;
-    width: auto;
+    height: 60%; /* Establece la altura de la imagen al 60% del contenedor padre */
+    width: auto; /* Permite que el ancho de la imagen se ajuste automáticamente */
 }
 
+/* Línea horizontal dentro del header */
 header hr {
-    width: 70%;
+    width: 70%; /* Establece el ancho de la línea horizontal al 70% del contenedor padre */
 }
 
+/* Estilos para la navegación dentro del header */
 header nav {
-    width: 75%;
-    text-align: center;
-    padding: 10px;
+    width: 75%; /* Establece el ancho del nav al 75% del contenedor padre */
+    text-align: center; /* Centra el texto dentro del nav */
+    padding: 10px; /* Añade relleno al nav */
 }
 
+/* Estilos para los elementos de la lista en la navegación */
 header nav ul li {
-    display: inline-block;
+    display: inline-block; /* Coloca los elementos de la lista en línea (uno al lado del otro) */
 }
 
-
+/* Estilos para los enlaces dentro de la navegación */
 header nav ul li a {
-    margin-right: 10px;
+    margin-right: 10px; /* Añade margen derecho entre los elementos de la lista */
 }
 
+/* Alineación de los dos últimos elementos de la lista a la derecha */
 header nav ul li:nth-last-of-type(2),
 li:nth-last-of-type(1) {
     float: right;
 }
 
+/* Elimina los puntos de la lista y ajusta los márgenes */
 nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
 
+/* Mantiene los elementos de la lista en línea y establece el color de los enlaces a blanco */
 nav ul li {
     display: inline;
     margin-right: 10px;
@@ -67,263 +73,296 @@ nav a {
 
 /* CONTAINER */
 
+/* Contenedor principal */
 .container {
-    /* El calc está hecho para que el container ocupe toda la pantalla menos la altura(sumada) del header y el footer */
-    height: calc(100vh - 30.3vh);
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: row-reverse;
-
+    height: calc(100vh - 30.3vh); /* Calcula la altura del contenedor restando la altura del header y del footer al 100% de la altura visible del viewport */
+    display: flex; /* Usa el modelo de caja flexible para el contenedor principal */
+    justify-content: space-evenly; /* Distribuye el espacio disponible de manera uniforme entre los elementos hijos */
+    flex-direction: row-reverse; /* Ordena los elementos hijos en dirección de fila de derecha a izquierda */
 }
 
+/* Estilos para el contenido principal */
 .container main {
-    padding: 20px;
-    overflow-y: scroll;
+    padding: 20px; /* Añade relleno al contenido principal */
+    overflow-y: scroll; /* Añade una barra de desplazamiento vertical si el contenido es más grande que el área visible */
 }
 
+/* Estilos para los párrafos dentro del contenido principal */
 .container main p {
-    max-width: 90%;
+    max-width: 90%; /* Establece el ancho máximo de los párrafos al 90% del contenedor principal */
 }
 
+/* Estilos para el video dentro del contenedor principal */
 .video {
-    margin: auto;
-    margin-left: 50px;
-    text-align: center;
+    margin: auto; /* Centra el elemento horizontalmente */
+    margin-left: 50px; /* Añade margen izquierdo al elemento */
+    text-align: center; /* Centra el texto dentro del elemento */
 }
 
+/* Estilos para el iframe dentro del video */
 .video>iframe {
-    width: 600px;
-    height: 350px;
+    width: 600px; /* Establece el ancho del iframe a 600px */
+    height: 350px; /* Establece la altura del iframe a 350px */
 }
 
 /* FOOTER */
 
+/* Estilos para el footer */
 footer {
-    display: flex;
-    justify-content: space-between;
-    background-color: #3d7906;
-    color: #fff;
-    text-align: center;
-    height: 8.3vh;
+    display: flex; /* Usa el modelo de caja flexible para el footer */
+    justify-content: space-between; /* Distribuye el espacio disponible de manera uniforme entre los elementos hijos */
+    background-color: #3d7906; /* Establece el color de fondo del footer */
+    color: #fff; /* Establece el color del texto a blanco */
+    text-align: center; /* Centra el texto dentro del footer */
+    height: 8.3vh; /* Establece la altura del footer al 8.3% de la altura visible del viewport */
 }
 
+/* Estilos para los párrafos dentro del footer */
 footer p {
-    display: flex;
+    display: flex; /* Usa el modelo de caja flexible para los párrafos dentro del footer */
 }
 
+/* Estilos para las imágenes dentro del footer */
 footer img {
-    width: 120px;
-    height: auto;
+    width: 120px; /* Establece el ancho de las imágenes dentro del footer a 120px */
+    height: auto; /* Permite que la altura de las imágenes se ajuste automáticamente */
 }
 
 /* HOVER */
 
+/* Efectos de hover para los elementos de la navegación */
 header nav ul li:hover {
-    background-color: #51990d;
-    border-radius: 15%;
-    transform: scale(110%);
+    background-color: #51990d; /* Cambia el color de fondo al pasar el ratón por encima */
+    border-radius: 15%; /* Agrega esquinas redondeadas al elemento */
+    transform: scale(110%); /* Escala ligeramente el tamaño del elemento */
 }
 
+/* Efectos de hover para el último elemento de la navegación */
 header nav ul li:nth-of-type(5):hover {
-    background-color: initial;
-    border-radius: 0%;
-    transform: scale(100%);
+    background-color: initial; /* Restablece el color de fondo original al pasar el ratón por encima del último elemento */
+    border-radius: 0%; /* Restablece las esquinas redondeadas al pasar el ratón por encima del último elemento */
+    transform: scale(100%); /* Restablece el tamaño original al pasar el ratón por encima del último elemento */
 }
 
+/* Efectos de hover para los títulos principales */
 main h1:hover,
 h2:hover {
-    color: #3d7906;
-    margin-left: 7vw;
-    transform: scale(120%);
-    transition: transform 1s, color 1.2s, margin-left 1s;
+    color: #3d7906; /* Cambia el color del texto al pasar el ratón por encima */
+    margin-left: 7vw; /* Añade margen izquierdo al pasar el ratón por encima */
+    transform: scale(120%); /* Escala ligeramente el tamaño al pasar el ratón por encima */
+    transition: transform 1s, color 1.2s, margin-left 1s; /* Agrega transiciones suaves */
 }
 
+/* Efectos de hover para las imágenes dentro del contenido principal */
 .container main img:hover {
-    margin-left: 4vw;
-    transform: scale(110%);
-    transition: transform 0.5s, margin-left 1s;
+    margin-left: 4vw; /* Añade margen izquierdo al pasar el ratón por encima de las imágenes */
+    transform: scale(110%); /* Escala ligeramente el tamaño al pasar el ratón por encima de las imágenes */
+    transition: transform 0.5s, margin-left 1s; /* Agrega transiciones suaves */
 }
 
+/* Media Query para tamaños de pantalla entre 425px y 1024px */
 
 @media screen and (min-width: 425px) and (max-width: 1024px) {
 
+    /* Ajustes para la navegación en pantallas medianas */
     header nav {
-        display: flex;
-        justify-content: center;
-        width: 100vw;
-        margin-bottom: 2vh;
+        display: flex; /* Usa el modelo de caja flexible para el nav */
+        justify-content: center; /* Centra los elementos del nav horizontalmente */
+        width: 100vw; /* Establece el ancho del nav al 100% de la anchura visible del viewport */
+        margin-bottom: 2vh; /* Añade margen inferior al nav */
     }
 
+    /* Ajustes para los dos últimos elementos de la navegación en pantallas medianas */
     header nav ul li:nth-last-of-type(2),
     header nav ul li:nth-last-of-type(1) {
-        float: none;
-        margin-left: 5vw;
+        float: none; /* Restablece el flotado de los dos últimos elementos del nav */
+        margin-left: 5vw; /* Añade margen izquierdo a los dos últimos elementos del nav */
     }
 
+    /* Ajustes para la navegación en pantallas medianas */
     header nav ul {
-        text-align: center;
+        text-align: center; /* Centra el texto dentro del nav */
     }
 
+    /* Ajustes para los elementos de la lista en la navegación en pantallas medianas */
     header nav ul li {
-        margin-right: 0;
-        margin-bottom: 10px;
-        text-align: center;
+        margin-right: 0; /* Restablece el margen derecho de los elementos del nav */
+        margin-bottom: 10px; /* Añade margen inferior a los elementos del nav */
+        text-align: center; /* Centra el texto dentro de los elementos del nav */
     }
 
+    /* Oculta el quinto elemento de la navegación en pantallas medianas */
     header ul li:nth-of-type(5) {
         display: none;
     }
 
+    /* Ajustes para el contenedor principal en pantallas medianas */
     .container {
-        height: auto;
-        flex-direction: column;
-        align-items: stretch;
-        display: block;
+        height: auto; /* Restablece la altura del contenedor al automático */
+        flex-direction: column; /* Cambia la dirección de los elementos del contenedor a columna */
+        align-items: stretch; /* Estira los elementos del contenedor para que ocupen el ancho completo */
+        display: block; /* Cambia la visualización de los elementos del contenedor a bloque */
     }
 
+    /* Ajustes para el contenido principal en pantallas medianas */
     .container main {
-        max-width: none;
-        width: 100%;
-        margin-right: 0;
-        padding: 0;
-        overflow: hidden;
-        text-align: center;
+        max-width: none; /* Restablece el ancho máximo del contenido principal al automático */
+        width: 100%; /* Establece el ancho del contenido principal al 100% */
+        margin-right: 0; /* Restablece el margen derecho del contenido principal */
+        padding: 0; /* Restablece el relleno del contenido principal */
+        overflow: hidden; /* Oculta el contenido que desborda del área visible */
+        text-align: center; /* Centra el texto dentro del contenido principal */
     }
 
+    /* Ajustes para el elemento de video en pantallas medianas */
     .video {
-        margin-left: 0;
+        margin-left: 0; /* Restablece el margen izquierdo del elemento de video */
     }
 
+    /* Ajustes para los títulos principales en pantallas medianas */
     main h1,
     h2 {
-        color: inherit;
-        transform: none;
-        margin: inherit;
-        transition: none;
+        color: inherit; /* Hereda el color del texto del contenedor padre */
+        transform: none; /* Restablece la transformación del tamaño */
+        margin: inherit; /* Restablece el margen */
+        transition: none; /* Elimina las transiciones */
     }
 
+    /* Ajustes para los títulos principales al pasar el ratón por encima en pantallas medianas */
     main h1:hover,
     h2:hover {
-        color: inherit;
-        margin: auto;
-        transform: none;
-        transition: none;
+        color: inherit; /* Hereda el color del texto del contenedor padre al pasar el ratón por encima */
+        margin: auto; /* Centra el texto al pasar el ratón por encima */
+        transform: none; /* Restablece la transformación del tamaño al pasar el ratón por encima */
+        transition: none; /* Elimina las transiciones al pasar el ratón por encima */
     }
 
+    /* Ajustes para las imágenes dentro del contenido principal al pasar el ratón por encima en pantallas medianas */
     .container main img:hover {
-        margin: 0;
-        transform: none;
-        transition: none
+        margin: 0; /* Restablece el margen de las imágenes al pasar el ratón por encima */
+        transform: none; /* Restablece la transformación del tamaño al pasar el ratón por encima */
+        transition: none; /* Elimina las transiciones al pasar el ratón por encima */
     }
 }
 
+/* Media Query para tamaños de pantalla menores o iguales a 426px */
+
+
 @media screen and (max-width: 426px) {
+    /* Ajustes para el header */
     header {
-        width: 100vw;
-        height: auto;
+        width: 100vw; /* Establece el ancho del header al 100% de la anchura visible del viewport */
+        height: auto; /* Restablece la altura del header al automático */
     }
 
     header img {
-        height: 100%;
-        width: auto;
+        height: 100%; /* Establece la altura de la imagen del header al 100% */
+        width: auto; /* Establece el ancho de la imagen del header al automático */
     }
 
     header nav {
-        width: 100%;
-        padding: 5px;
-        display: none;
-        transition: opacity 0.3s;
-        opacity: 0;
+        width: 100%; /* Establece el ancho del nav al 100% */
+        padding: 5px; /* Añade un pequeño relleno al nav */
+        display: none; /* Oculta el nav */
+        transition: opacity 0.3s; /* Agrega una transición de opacidad al nav */
+        opacity: 0; /* Establece la opacidad inicial del nav a 0 */
     }
 
     header nav ul li {
-        display: block;
-        margin-right: 0;
-        margin-bottom: 10px;
-        text-align: center;
+        display: block; /* Cambia la visualización de los elementos del nav a bloque */
+        margin-right: 0; /* Restablece el margen derecho de los elementos del nav */
+        margin-bottom: 10px; /* Añade margen inferior a los elementos del nav */
+        text-align: center; /* Centra el texto dentro de los elementos del nav */
     }
 
-    header nav ul li:nth-of-type(1), header nav ul li:nth-of-type(2), header nav ul li:nth-of-type(3), header nav ul li:nth-of-type(4) {
-        display: inline-block;
+    header nav ul li:nth-of-type(1),
+    header nav ul li:nth-of-type(2),
+    header nav ul li:nth-of-type(3),
+    header nav ul li:nth-of-type(4) {
+        display: inline-block; /* Cambia la visualización de los primeros cuatro elementos del nav a en línea */
     }
 
     header nav ul li:nth-last-of-type(2),
     header nav ul li:nth-last-of-type(1) {
-        float: none;
-        margin-top: 10px;
-        margin-left: 0;
+        float: none; /* Restablece el flotado de los dos últimos elementos del nav */
+        margin-top: 10px; /* Añade margen superior a los dos últimos elementos del nav */
+        margin-left: 0; /* Restablece el margen izquierdo de los dos últimos elementos del nav */
     }
 
     header nav ul li:nth-of-type(5) {
-        overflow: hidden;
+        overflow: hidden; /* Oculta el quinto elemento del nav si desborda */
     }
 
+    /* Ajustes para el contenedor principal */
     .container {
-        height: auto;
-        flex-direction: column;
-        align-items: stretch;
-        display: block;
+        height: auto; /* Restablece la altura del contenedor al automático */
+        flex-direction: column; /* Cambia la dirección de los elementos del contenedor a columna */
+        align-items: stretch; /* Estira los elementos del contenedor para que ocupen el ancho completo */
+        display: block; /* Cambia la visualización de los elementos del contenedor a bloque */
     }
 
     .container main {
-        max-width: none;
-        width: 100vw;
-        margin-right: 0;
-        padding: 0;
-        overflow: hidden;
-        text-align: center;
+        max-width: none; /* Restablece el ancho máximo del contenido principal al automático */
+        width: 100%; /* Establece el ancho del contenido principal al 100% */
+        margin-right: 0; /* Restablece el margen derecho del contenido principal */
+        padding: 0; /* Restablece el relleno del contenido principal */
+        overflow: hidden; /* Oculta el contenido que desborda del área visible */
+        text-align: center; /* Centra el texto dentro del contenido principal */
     }
 
     .container main img {
-        width: 40vw;
+        width: 40vw; /* Establece el ancho de las imágenes al 40% del ancho visible del viewport */
     }
 
     .video {
-        margin-left: 0;
+        margin-left: 0; /* Restablece el margen izquierdo del elemento de video */
     }
 
     .video>iframe {
-        width: auto;
+        width: auto; /* Establece el ancho del iframe de video al automático */
     }
 
+    /* Ajustes para los títulos principales al pasar el ratón por encima */
     main h1,
     h2 {
-        color: inherit;
-        transform: none;
-        margin: inherit;
-        transition: none;
+        color: inherit; /* Hereda el color del texto del contenedor padre */
+        transform: none; /* Restablece la transformación del tamaño */
+        margin: inherit; /* Restablece el margen */
+        transition: none; /* Elimina las transiciones */
     }
 
     main h1:hover,
     h2:hover {
-        color: inherit;
-        margin: auto;
-        transform: none;
-        transition: none;
+        color: inherit; /* Hereda el color del texto del contenedor padre al pasar el ratón por encima */
+        margin: auto; /* Centra el texto al pasar el ratón por encima */
+        transform: none; /* Restablece la transformación del tamaño al pasar el ratón por encima */
+        transition: none; /* Elimina las transiciones al pasar el ratón por encima */
     }
 
+    /* Ajustes para las imágenes al pasar el ratón por encima */
     .container main img:hover {
-        margin: 0;
-        transform: none;
-        transition: none;
+        margin: 0; /* Restablece el margen de las imágenes al pasar el ratón por encima */
+        transform: none; /* Restablece la transformación del tamaño al pasar el ratón por encima */
+        transition: none; /* Elimina las transiciones al pasar el ratón por encima */
     }
 
+    /* Ajustes para el pie de página */
     footer p {
-        text-align: center;
-        padding: auto;
-        margin: auto;
-        font-size: small;
+        text-align: center; /* Centra el texto en el pie de página */
+        padding: auto; /* Restablece el relleno del pie de página al automático */
+        margin: auto; /* Restablece el margen del pie de página al automático */
+        font-size: small; /* Establece el tamaño de fuente del pie de página a pequeño */
     }
 
     footer img {
-        display: none;
+        display: none; /* Oculta las imágenes del pie de página */
     }
 
+    /* Mostrar el nav al pasar el ratón por encima del header o la imagen del header */
     header:hover nav,
     header img:hover+nav {
-        display: block;
-        opacity: 1;
-        transition: opacity 0.3s;
+        display: block; /* Muestra el nav */
+        opacity: 1; /* Establece la opacidad del nav a 1 */
+        transition: opacity 0.3s; /* Agrega una transición de opacidad al nav */
     }
-
 }
