--- a/proyecto/Login/login.css
+++ b/proyecto/Login/login.css
@@ -1,3 +1,5 @@
+/* BODY */
+
 body {
     background-color: lightgreen;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23db4206' fill-opacity='0.4'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
@@ -12,6 +14,8 @@ body {
     border: 0;
     padding: 0;
 }
+
+/* GRID DEL BODY */
 
 body {
     display: grid;
@@ -37,6 +41,8 @@ footer {
     grid-area: footer;
 }
 
+
+/* HEADER */
 
 header {
     background-color: #3d7906;
@@ -85,6 +91,9 @@ nav a {
     color: #fff;
 }
 
+
+/* ESTILOS DEL CONTENIDO PRINCIPAL: FORMULARIO */
+
 .formulario {
     margin: auto;
     border: 1px solid brown;
@@ -129,11 +138,15 @@ a {
     color: black;
 }
 
+/* FOOTER */
+
 footer {
     background-color: #3d7906;
     color: #fff;
     text-align: center;
 }
+
+/* ESTILOS DEL BOTÓN */
 
 .formulario .button {
     width: 8vw;
@@ -209,6 +222,8 @@ header nav ul li:hover {
     transform: scale(110%);
 }
 
+/* MEDIA QUERY PARA TABLETS */
+
 @media screen and (min-width: 425px) and (max-width: 1024px) {
 
     .formulario .button {
@@ -232,6 +247,8 @@ header nav ul li:hover {
     }
 
 }
+
+/* MEDIA QUERY PARA MÓVILES */
 
 @media screen and (max-width: 426px) {
     body {
